<resources>
    <string name="app_name">Senior_citizen_App</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="hint_username">Username</string>
    <string name="hint_fullname">Fullname</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_caretakername">Caretaker name</string>
    <string name="hint_caretakernumber">Phone</string>
    <string name="hint_confirmPassword">Confirm Password</string>
    <string name="btn_log_in">LOG IN</string>
    <string name="btn_signup">SIGNUP</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_link_to_register">Not a member?Signup now</string>
</resources>
