<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorbackground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/rectangebg"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/fullname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHint="@color/colorbackground" />
        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/colorbackground" />

        <EditText
            android:id="@+id/confirmpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:hint="@string/hint_confirmPassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/colorbackground" />
        <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/colorbackground"
        android:textColorHint="@color/colorbackground" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:hint="@string/hint_phone"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/colorbackground"
            android:textColorHint="@color/colorbackground" />
        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/btn_signup"
            android:textColor="@color/colorbackground" />

        <!-- Link to Login Screen -->

    </LinearLayout>

</LinearLayout>
